methode get , post , sprint 7